docs_src/98.wip/pihole/pihole-svc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-udp
  namespace: home
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole
  labels:
    app: enternal-dns
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.0.249
  externalTrafficPolicy: Local
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
  selector:
    app: pihole
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-tcp
  namespace: home
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole
  labels:
    app: pihole
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.0.249
  externalTrafficPolicy: Local
  ports:
    - name: dns-tcp
      port: 53
      protocol: TCP
    - name: pihole-http
      port: 80
      protocol: TCP
      targetPort: pihole-http
    - name: pihole-https
      port: 443
      protocol: TCP
      targetPort: pihole-https
  selector:
    app: pihole
  sessionAffinity: None
