docs_src/98.wip/pihole/admin-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pihole-external-ingress
  namespace: home
  labels:
    app: pihole
    tier: frontend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /admin/$1
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/server-snippet: |
      proxy_ssl_verify off;
spec:
  tls:
  - hosts:
    - pihole.jamesveitch.dev
    secretName: pihole-certs
  rules:
  - host: pihole.jamesveitch.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: pihole-tcp
          servicePort: pihole-https
